--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "simple-swgoh-arena-tracker",
   "description": "Simple SWGOH arena tracker",
-  "repository": "https://github.com/iprobedroid/swgoh-arena-tracker",
+  "repository": "https://github.com/jadwan/fleet2018",
   "keywords": ["docker"],
   "stack": "container"
 }
